--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
    </header>
    <div >
-    <h1> WDD 230: Assignment Portal </h1>
+    <h1> WDD 230: Asignment Portal </h1>
    </div>
    <hr>
    <main>
